Fix syntax as lists are not allowed inside paragraphs
and remove trailing slashes.

--- a/contribute.html
+++ b/contribute.html
@@ -69,7 +69,7 @@
 				<div class="title">
 					<h2>Grow in 2021</h2>
 					<p>
-						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development. 
+						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development.
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
 						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" width="200" height="189" loading="lazy">
 						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">110000</a> systems running DietPi.
@@ -84,7 +84,7 @@
 				<div class="title">
 					<h2>Why contribute to DietPi as an open-source project?</h2>
 					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it's coding, documentation, testing, web design. If you're looking to help, there's something for you on here!</p>
-				</div>				
+				</div>
 				<nav class="nav nav-pills" id="contributeinfo" style="display:none">
 					<button class="nav-link filter" data-filter=".Report">Report / Diagnose issues</button>
 					<button class="nav-link filter" data-filter=".Ideas">Contribute with ideas</button>
@@ -110,17 +110,15 @@
 					<div class="row"><div class="col-md-12 project-title"><h3>Investigate issues / Provide help</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
+							<p>Many times the DietPi project needs help on existent items:</p>
+							<ul>
+								<li>Run an investigation (e.g. an installation issue on specific software title)</li>
+								<li>Provide a workaround to an existent issue</li>
+								<li>Give help when testing is required</li>
+								<li>Give your opinion on discussions in the issue tracker. It's a good opportunity to influence the future direction of DietPi.
+							</ul>
 							<p>
-								Many times the DietPi project needs help on existent items:
-								<ul>
-									<li>Run an investigation (e.g. an installation issue on specific software title)</li>
-									<li>Provide a workaround to an existent issue</li>
-									<li>Give help when testing is required</li>
-									<li>Give your opinion on discussions in the issue tracker. It's a good opportunity to influence the future direction of DietPi.
-								</ul>
-							</p>
-							<p>
-								Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid. 
+								Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid.
 								<br>Help make them easier to resolve. Handling issues takes a lot of time that we could rather spend on fixing bugs and adding features.
 								<br><br>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
 							</p>
@@ -146,13 +144,11 @@
 						<div class="col-md-6 project-description">
 							<p>DietPi supports multiple SBCs or PC / VM configurations. Very similar with investigating the issues, but specific to hardware, we need your help to run tests and specific installations for certain SBC models or PCs</p>
 							<p>It is often the need to check a new installation on a new SBC model, or maybe verify DietPi in connection with a specific driver. Doing such installation provides a big help to the overall project.</p>
-							<p>
-								Examples:
-								<ul>
-									<li>A driver installation for a specific SBC</li>
-									<li>Testing a performance tweak.</li>
-								</ul>
-							</p>
+							<p>Examples:</p>
+							<ul>
+								<li>A driver installation for a specific SBC</li>
+								<li>Testing a performance tweak.</li>
+							</ul>
 							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22" target="_blank" rel="noopener"><i>Help wanted!</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/test-configurations.jpg" alt="Test" width="8" height="5" loading="lazy"></div>
@@ -201,10 +197,10 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<p>
-								<b>Would you like to fix a bug or help extending the DietPi project?</b> 
+								<b>Would you like to fix a bug or help extending the DietPi project?</b>
 								<br><br>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution.
 								<br><br>You may find an issue is assigned. Please double-check before starting on this issue because somebody else is likely already working on it. Once you find an issue you'd like to work on leave a comment so others are aware. We'll then assign that issue to you.
-								<br><br>When you're ready to get feedback on your work, open a draft pull request.							
+								<br><br>When you're ready to get feedback on your work, open a draft pull request.
 							</p>
 							<p>
 								Please find here more details on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.
@@ -219,14 +215,12 @@
 					<div class="row"><div class="col-md-12 project-title"><h3>Use DietPi Forum</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
-							<p>
-								Discuss with community. 
-								<ul> 
-									<li>First time user, and you need help? No problem!</li>
-									<li>Do you have a question? Search for answers or create a new topic. One of the community members will help you</li>
-								</ul>
-								<br>Connect now to the <a href="https://dietpi.com/phpbb/">DietPi Forum</a>.
-							</p>
+							<p>Discuss with community.</p>
+							<ul>
+								<li>First time user, and you need help? No problem!</li>
+								<li>Do you have a question? Search for answers or create a new topic. One of the community members will help you</li>
+							</ul>
+							<p>Connect now to the <a href="https://dietpi.com/phpbb/">DietPi Forum</a>.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/be-part-community.jpg" alt="Community" width="8" height="5" loading="lazy"></div>
 					</div>
