Fix GitHub issues links
Filtering two labels shows only issues with have both assigned, while here we want to show issues which have either "Help wanted" or "Testing required" assigned. Since this is not possible, the link is split instead to show either issues with the one or with the other label only.

--- a/contribute.html
+++ b/contribute.html
@@ -149,7 +149,7 @@
 								<li>A driver installation for a specific SBC</li>
 								<li>Testing a performance tweak.</li>
 							</ul>
-							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22" target="_blank" rel="noopener"><i>Help wanted!</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
+							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22" target="_blank" rel="noopener"><i>Help wanted!</i></a> or <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Testing/testers+required+:arrow_down_small:%22" target="_blank" rel="noopener"><i>Testing required</i></a> in DietPi issues on GitHub.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/test-configurations.jpg" alt="Test" width="8" height="5" loading="lazy"></div>
 					</div>
