Add the "All" filter button

--- a/contribute.html
+++ b/contribute.html
@@ -86,6 +86,7 @@
 					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it's coding, documentation, testing, web design. If you're looking to help, there's something for you on here!</p>
 				</div>
 				<nav class="nav nav-pills" id="contributeinfo" style="display:none">
+					<button class="nav-link filter" data-filter="all">[All]</button>
 					<button class="nav-link filter" data-filter=".Report">Report / Diagnose issues</button>
 					<button class="nav-link filter" data-filter=".Ideas">Contribute with ideas</button>
 					<button class="nav-link filter" data-filter=".Community">Part of community & Share experiences</button>
