Navigation bar harmonized
On different html pages  were different navigation bars.

--- a/contribute.html
+++ b/contribute.html
@@ -48,12 +48,13 @@
 				<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
 				<!-- Main navigation -->
 				<div class="navbar-collapse collapse">
-					<a class="nav-link" href="/">Home</a>
-					<a class="nav-link" href="/#features">Features</a>
-					<a class="nav-link" href="/#download">Download</a>
-					<a class="nav-link" href="/#gettingstarted">Getting Started</a>
-					<a class="nav-link" href="#contribute">Contribute</a>
-					<a class="nav-link" href="/#testimonials">Testimonials</a>
+					<a class="nav-link" href="#home">Home</a>
+					<a class="nav-link" href="#features">Features</a>
+					<a class="nav-link" href="#download">Download</a>
+					<a class="nav-link" href="#gettingstarted">Getting Started</a>
+					<a class="nav-link" href="#stats">Stats</a>
+					<a class="nav-link" href="contribute.html">Contribute</a>
+					<a class="nav-link" href="#testimonials">Testimonials</a>
 				</div>
 				<!-- End main navigation -->
 			</div>
@@ -69,7 +70,7 @@
 				<div class="title">
 					<h2>Grow in 2021</h2>
 					<p>
-						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development. 
+						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development.
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
 						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" width="200" height="189" loading="lazy">
 						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">110000</a> systems running DietPi.
@@ -84,7 +85,7 @@
 				<div class="title">
 					<h2>Why contribute to DietPi as an open-source project?</h2>
 					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it's coding, documentation, testing, web design. If you're looking to help, there's something for you on here!</p>
-				</div>				
+				</div>
 				<nav class="nav nav-pills" id="contributeinfo" style="display:none">
 					<button class="nav-link filter" data-filter=".Report">Report / Diagnose issues</button>
 					<button class="nav-link filter" data-filter=".Ideas">Contribute with ideas</button>
@@ -121,7 +122,7 @@
 								</ul>
 							</p>
 							<p>
-								Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid. 
+								Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid.
 								<br>Help make them easier to resolve. Handling issues takes a lot of time that we could rather spend on fixing bugs and adding features.
 								<br><br>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
 							</p>
@@ -202,10 +203,10 @@
 						<div class="project-description">
 							<div class="project-title clearfix"><h3>Extend DietPi</h3><span class="show_hide close"></span></div>
 							<p>
-								<b>Would you like to fix a bug or help extending the DietPi project?</b> 
+								<b>Would you like to fix a bug or help extending the DietPi project?</b>
 								<br><br>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution.
 								<br><br>You may find an issue is assigned. Please double-check before starting on this issue because somebody else is likely already working on it. Once you find an issue you'd like to work on leave a comment so others are aware. We'll then assign that issue to you.
-								<br><br>When you're ready to get feedback on your work, open a draft pull request.							
+								<br><br>When you're ready to get feedback on your work, open a draft pull request.
 							</p>
 							<p>
 								Please find here more details on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.
@@ -221,8 +222,8 @@
 						<div class="project-description">
 							<div class="project-title clearfix"><h3>Use DietPi Forum</h3><span class="show_hide close"></span></div>
 							<p>
-								Discuss with community. 
-								<ul> 
+								Discuss with community.
+								<ul>
 									<li>First time user, and you need help? No problem!</li>
 									<li>Do you have a question? Search for answers or create a new topic. One of the community members will help you</li>
 								</ul>
