--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 					<a class="nav-link" href="#features">Features</a>
 					<a class="nav-link" href="#download">Download</a>
 					<a class="nav-link" href="#gettingstarted">Getting Started</a>
+					<a class="nav-link" href="#stats">Stats</a>
 					<a class="nav-link" href="contribute.html">Contribute</a>
 					<a class="nav-link" href="#testimonials">Testimonials</a>
 				</div>
