--- a/stats.html
+++ b/stats.html
@@ -60,6 +60,7 @@
 					<a class="nav-link" href="/#download">Download</a>
 					<a class="nav-link" href="/#gettingstarted">Getting Started</a>
 					<a class="nav-link" href="#stats">Stats</a>
+					<a class="nav-link" href="contribute.html">Contribute</a>
 					<a class="nav-link" href="/#testimonials">Testimonials</a>
 				</div>
 				<!-- End main navigation -->
