Update first slide to point to Debian Bullseye and DietPi v7.5 beta

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.4 has been released!</h2>
-					<h4>Time to upgrade...</h4>
-					<p>Host your own <code>Matrix Synapse</code> chat server, store data with <code>PostgreSQL</code> or download videos via <code>youtube-dl</code>. Furthermore, DietPi has been tested for the upcoming release <code>Debian 11 (Bullseye)</code>.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/#juli-2021-version-74" target="_blank" rel="noopener">Release notes</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
+					<h2>Debian Bullseye and DietPi v7.5 Beta</h2>
+					<h4>Like Christmas and Easter on the same day...</h4>
+					<p>The new Debian "Bullseye" has been released. Raspberry Pi Bullseye images are ready, other downloads will be updated gradually. Also check out our new DietPi v7.5 beta.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4641" target="_blank" rel="noopener">Read more</a>
+					<div class="da-img"><img class="img-fluid" src="https://www.debian.org/logos/openlogo-nd.svg" alt="DietPi logo" width="200" height="249" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
 				<div class="da-slide">
