--- a/index.html
+++ b/index.html
@@ -820,8 +820,8 @@
 								<div><span>RAM:</span>Host system dependent</div>
 								<br>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Buster.7z"><span>Direct flash Image:</span><i class="fa fa-download" aria-hidden="true"></i><u>Download</u></a>
-									<br>Choose this to flash directly to the root disk of the target system.
+									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bullseye.7z"><span>Direct flash Image:</span><i class="fa fa-download" aria-hidden="true"></i><u>Download</u></a>
+									<br>Choose this to flash directly to the root drive of the target system.
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Buster_Installer.7z"><span>Installer Image:</span><i class="fa fa-download" aria-hidden="true"></i><u>Download</u></a>
