--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>Debian Bullseye and DietPi v7.5 Beta</h2>
+					<h2>DietPi v7.5 and Debian Bullseye</h2>
 					<h4>Like Christmas and Easter on the same day...</h4>
-					<p>The new Debian "Bullseye" has been released. Raspberry Pi Bullseye images are ready, other downloads will be updated gradually. Also check out our new DietPi v7.5 beta.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4641" target="_blank" rel="noopener">Read more</a>
+					<p>DietPi v7.5 has been released with further enhancements and fixes for Debian Bullseye. Check out the full release notes.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/#august-2021-version-75" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="https://www.debian.org/logos/openlogo-nd.svg" alt="DietPi logo" width="200" height="249" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
