Bootstrap v5.1.0 and styles update

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -32,11 +32,11 @@
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css?v=1">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=4">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
-		<script defer src="js/bootstrap.min.js"></script>
+		<script defer src="js/bootstrap.min.js?v=1"></script>
 		<script defer src="js/mixitup.min.js"></script>
 		<script defer src="js/app.min.js"></script>
 	</head>
@@ -45,16 +45,16 @@
 			<div class="container-xl">
 				<img src="images/dietpi-logo_240x80.png" alt="Logo" loading="lazy">
 				<!-- Navigation button, visible on small resolution -->
-				<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
+				<button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
 				<!-- Main navigation -->
 				<div class="navbar-collapse collapse">
-					<a class="nav-link" href="/">Home</a>
-					<a class="nav-link" href="/#features">Features</a>
-					<a class="nav-link" href="/#download">Download</a>
-					<a class="nav-link" href="/#gettingstarted">Getting Started</a>
-					<a class="nav-link" href="stats.html">Stats</a>
-					<a class="nav-link" href="contribute.html">Contribute</a>
-					<a class="nav-link" href="/#testimonials">Testimonials</a>
+					<a class="nav-link" href="/">HOME</a>
+					<a class="nav-link" href="/#features">FEATURES</a>
+					<a class="nav-link" href="/#download">DOWNLOAD</a>
+					<a class="nav-link" href="/#gettingstarted">GETTING STARTED</a>
+					<a class="nav-link" href="stats.html">STATS</a>
+					<a class="nav-link" href="contribute.html">CONTRIBUTE</a>
+					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
 				<!-- End main navigation -->
 			</div>
