Minor hardware details correction
https://github.com/MichaIng/DietPi-Website/issues/159

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 							<div class="project-info">
 								<div><span>CPU:</span>Allwinner H3 1.0 GHz | 4 cores | ARMv7</div>
 								<div><span>RAM:</span>256 MiB - 512 MiB DDR3</div>
-								<div><span>NET:</span>Gbit Ethernet</div>
+								<div><span>NET:</span>100 Mbit Ethernet</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiNEO-ARMv7-Buster.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
@@ -370,8 +370,8 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>CPU:</span>Allwinner H3 1.0 GHz | 4 cores | ARMv7</div>
-								<div><span>RAM:</span>256 MiB - 512 MiB DDR3</div>
-								<div><span>NET:</span>Onboard WiFi</div>
+								<div><span>RAM:</span>512 MiB DDR3</div>
+								<div><span>NET:</span>Onboard WiFi 4 (802.11n)</div>
 								<div><span>Storage:</span>8 GiB eMMC</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiNEOAir-ARMv7-Buster.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
