--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi Beta v7.6 is here</h2>
-					<h4>Please help testing the upcoming release</h4>
+					<h2>DietPi v7.6 is here</h2>
+					<h4>Check out the changes of our new release</h4>
 					<p>Run x86_64 programs on ARM64 via Box64 user space emulation, share and access your data remotely via File Browser, enjoy hardware support for Kodi on Raspberry Pi Bullseye, and much more.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/#september-2021-version-76" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
