--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
 							<div class="project-info">
 								<div><span>DietPi-PREP:</span>Convert any Debian image, into a DietPi system.</div>
 								<br>
-								<div><a href="https://dietpi.com/docs/dietpi_sbc/#make-your-own-distribution" target="_blank" rel="noopener"><span>Install Guide:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://dietpi.com/docs/hardware/#make-your-own-distribution" target="_blank" rel="noopener"><span>Install Guide:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>Unable to find an available image for your device? Don't worry, DietPi contains a script which can be used to turn an installed Debian-based OS into DietPi.</p>
 							<p>Simply follow the instructions.</p>
