Add link to blog post to stats page

--- a/stats.html
+++ b/stats.html
@@ -65,7 +65,8 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="title">
 					<h1>DietPi OS stats & comparison</h1>
-					<p>See resource usage and performance stats of DietPi images, and compare those against other Debian-based distributions:</p>
+					<p>See resource usage and performance stats of DietPi images, and compare those against other Debian-based distributions.</p>
+					<p>Further details about the compared values can be found in our <a href="https://dietpi.com/blog/?p=888" target="_blank" rel="noopener">blog post</a>.</p>
 				</div>
 				<nav class="nav nav-pills" id="distrostats" style="display:none">
 					<button class="nav-link filter" data-filter="all">[All]</button>
