Remove removed software titles
And some minor fixes

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -903,26 +903,6 @@
 					</div>
 				</div>
 				<!-- End details for portfolio project 39 -->
-				<!-- Start details for portfolio project 40 -->
-				<div id="slidingdiv40" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/couchpotato_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/couchpotato_1.jpg" alt="CouchPotato" loading="lazy"></a></div>
-					<div class="col-md-8">
-						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>CouchPotato</h3>
-								<span class="show_hide close"></span>
-							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/bittorrent/#couchpotato" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Slick web interface.</div>
-								<div><span>Cons:</span>TBA</div>
-							</div>
-							<p>PVR for Usenet and torrents. Just fill in what you want to see and CouchPotato will add it to your "want to watch"-list. Every day it will search through multiple NZB & torrent sites, looking for the best possible match. If available, it will download it using your favorite download software.</p>
-						</div>
-					</div>
-				</div>
-				<!-- End details for portfolio project 40 -->
 				<!-- Start details for portfolio project 41 -->
 				<div id="slidingdiv41" class="toggleDiv row single-project">
 					<div class="col-md-4"><a href="images/dietpi-software/jackett_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/jackett_1.jpg" alt="Jackett" loading="lazy"></a></div>
@@ -938,7 +918,7 @@
 								<div><span>Pros:</span>TBA</div>
 								<div><span>Cons:</span>TBA</div>
 							</div>
-							<p>Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, Lidarr, Medusa, CouchPotato) into tracker-site-specific HTTP queries, parses the HTML response, then sends results back to the requesting software. This allows for getting recent uploads (like RSS) and performing searches.</p>
+							<p>Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, Lidarr, Medusa) into tracker-site-specific HTTP queries, parses the HTML response, then sends results back to the requesting software. This allows for getting recent uploads (like RSS) and performing searches.</p>
 						</div>
 					</div>
 				</div>
@@ -1365,11 +1345,11 @@
 				</div>
 				<!-- Start details for portfolio project 65 -->
 				<div id="slidingdiv65" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/baikal_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/baikal_1.jpg" alt="BaiKal" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/baikal_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/baikal_1.jpg" alt="Baïkal" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>BaiKal</h3>
+								<h3>Baïkal</h3>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
@@ -1957,17 +1937,17 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 				</div>
 				<!-- Start details for portfolio project 96 -->
 				<div id="slidingdiv96" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/noimage_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noimage_1.jpg" alt="Tomcat8" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/noimage_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noimage_1.jpg" alt="Tomcat" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Tomcat8</h3>
+								<h3>Tomcat</h3>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
 								<div><a href="https://dietpi.com/docs/software/webserver_stack/#tomcat" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>Web ARchive</code>) file, and simply drop it in the deploy directory in Tomcat. </p>
+							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>Web ARchive</code>) file, and simply drop it in the deploy directory in Tomcat.</p>
 						</div>
 					</div>
 				</div>
@@ -2139,25 +2119,6 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 								<div><span>Cons:</span>None</div>
 							</div>
 							<p>High performance TCP/HTTP load balancer</p>
-						</div>
-					</div>
-				</div>
-				<!-- Start details for portfolio project 107 -->
-				<div id="slidingdiv107" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/noip_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/noip_0.jpg" alt="No-IP" loading="lazy"></a></div>
-					<div class="col-md-8">
-						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>No-IP</h3>
-								<span class="show_hide close"></span>
-							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/advanced_networking/#no-ip" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Free website URL address pointing to your device</div>
-								<div><span>Cons:</span>None</div>
-							</div>
-							<p>Use your No-IP account and website URL address to always have it pointing to your DietPi System. Essential if your hosting a website.</p>
 						</div>
 					</div>
 				</div>
@@ -2348,25 +2309,6 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 								<div><span>Cons:</span>None</div>
 							</div>
 							<p>A lightweight, bare-bones, no frills HiFi music player with a web based interface. myMPD is a front end for MPD, and a recent fork of YMPD. myMPD provides a reworked UI based on Bootstrap 4, and, a modernized backend including many new features, whilst having the same small footprint as ympd.</p>
-						</div>
-					</div>
-				</div>
-				<!-- Start details for portfolio project 118 -->
-				<div id="slidingdiv118" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/dietpi-nordvpn_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/dietpi-nordvpn_2.jpg" alt="DietPi-NordVPN" loading="lazy"></a></div>
-					<div class="col-md-8">
-						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>DietPi-NordVPN</h3>
-								<span class="show_hide close"></span>
-							</div>
-							<div class="project-info">
-								<div><a href="https://dietpi.com/docs/software/vpn/#dietpi-nordvpn" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
-								<br>
-								<div><span>Pros:</span>Internet freedom and complete privacy VPN</div>
-								<div><span>Cons:</span>Requires a paid subscription</div>
-							</div>
-							<p>DietPi-NordVPN is a combination of OpenVPN installation and DietPi front end GUI. Allowing all NordVPN users to quickly and easily connect to any NordVPN server in TCP or UDP, using only open source software. Highly recommended for BitTorrent/NZB use.</p>
 						</div>
 					</div>
 				</div>
@@ -2710,13 +2652,6 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Download">
-						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv40">
-							<img src="images/dietpi-software/couchpotato_0.jpg" alt="project 40" width="8" height="5" loading="lazy">
-							<h3>CouchPotato</h3>
-							<p>Automatically download movies</p>
-						</a>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Download">
 						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv41">
 							<img src="images/dietpi-software/jackett_0.jpg" alt="project 41" width="8" height="5" loading="lazy">
 							<h3>Jackett</h3>
@@ -2887,7 +2822,7 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Social">
 						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv65">
 							<img src="images/dietpi-software/baikal_0.jpg" alt="project 65" width="8" height="5" loading="lazy">
-							<h3>BaiKal</h3>
+							<h3>Baïkal</h3>
 							<p>CalDAV + CardDAV server</p>
 						</a>
 					</div>
@@ -3104,7 +3039,7 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix WebserverStacks">
 						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv96">
 							<img src="images/dietpi-software/tomcat8_0.jpg" alt="project 96" width="8" height="5" loading="lazy">
-							<h3>Tomcat8</h3>
+							<h3>Tomcat</h3>
 							<p>Apache Tomcat server</p>
 						</a>
 					</div>
@@ -3144,13 +3079,6 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix VPNServer">
-						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv118">
-							<img src="images/dietpi-software/dietpi-nordvpn_0.jpg" alt="project 118" width="8" height="5" loading="lazy">
-							<h3>DietPi-NordVPN</h3>
-							<p>OpenVPN + GUI</p>
-						</a>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix VPNServer">
 						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv102">
 							<img src="images/dietpi-software/openvpn_0.jpg" alt="project 102" width="8" height="5" loading="lazy">
 							<h3>OpenVPN</h3>
@@ -3176,13 +3104,6 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 							<img src="images/dietpi-software/haproxy_0.jpg" alt="project 106" width="8" height="5" loading="lazy">
 							<h3>HAProxy</h3>
 							<p>TCP/HTTP load balancer</p>
-						</a>
-					</div>
-					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Misc">
-						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv107">
-							<img src="images/dietpi-software/noip_0.jpg" alt="project 107" width="8" height="5" loading="lazy">
-							<h3>No-IP</h3>
-							<p>Website URL address points to IP</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix SSH">
