--- a/contribute.html
+++ b/contribute.html
@@ -77,7 +77,7 @@
 						<br><b>Enable us to grow in 2021!</b>
 					</p>
 					<p class="medium-text">
-						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
+						<a href="https://www.paypal.com/donate?hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
 						<a href="https://www.patreon.com/bePatron?u=12464530" class="button" target="_blank" rel="noopener">Become a Patron</a>
 						<a href="https://brave.com/tips/" class="button" target="_blank" rel="noopener">Donate through Brave Rewards</a>
 					</p>
