--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.7 is here</h2>
-					<h4>Check out the changes of our new release</h4>
-					<p>We reworked the way hot network connectivity and time sync check is done at boot to speed up the boot sequence. Kodi on Bullseye should run a bit smoother, DietPi-JustBoom went through a rework, and much more.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/#october-2021-version-77" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi beta v7.8 is here</h2>
+					<h4>Help testing the upcoming release</h4>
+					<p>We added an own web dashboard to monitor and manage your DietPi, and support for Raspberry Pi Zero 2 W and Radxa Zero SBCs.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4875" target="_blank" rel="noopener">All infos</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
