--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi beta v7.8 is here</h2>
-					<h4>Help testing the upcoming release</h4>
+					<h2>DietPi v7.8 is here</h2>
+					<h4>Time to update your DietPi system</h4>
 					<p>We added an own web dashboard to monitor and manage your DietPi, and support for Raspberry Pi Zero 2 W and Radxa Zero SBCs.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4936" target="_blank" rel="noopener">All info</a>
+					<a class="da-link" href="https://dietpi.com/docs/releases/#november-2021-version-78" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
