Update supported RPi and CPU description

--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye.7z"><span>ARMv7 32-bit image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Uses the Debian package repository and does <b>NOT</b> work on Raspberry Pi 1 and Zero models.
+									<br>Uses the Debian package repository and does <b>NOT</b> work on Raspberry Pi 1 and Zero (1) models.
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye.7z"><span>ARMv8 64-bit image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Uses the Debian package repository and does <b>NOT</b> work on Raspberry Pi 1, Zero and 2 v1.1 models.
+									<br>Uses the Debian package repository and does <b>NOT</b> work on Raspberry Pi 1, Zero (1) and Raspberry Pi 2 v1.1 models.
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye_Amiberry.7z"><span>Amiberry ARMv6 image:</span><i class="fa fa-download"></i><u>Download</u></a>
@@ -304,7 +304,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Samsung Exynos5422 (4x 2GHz 4x 1.4GHz)</div>
+								<div><span>CPU:</span>Samsung Exynos5422 2.0/1.4 GHz | 8 cores | ARMv8</div>
 								<div><span>RAM:</span>2 GiB DDR3</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_OdroidXU4-ARMv7-Buster.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
@@ -511,7 +511,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>1 GiB - 4 GiB LPDDR4@3200 MiB/s</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<div><span>Storage:</span>eMMC socket</div>
@@ -679,7 +679,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB LPDDR4</div>
 								<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 								<div><span>Storage:</span>eMMC socket</div>
@@ -716,7 +716,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB LPDDR4</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<div><span>Storage:</span>eMMC socket, PCIe 4x</div>
@@ -806,7 +806,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB LPDDR3-1866</div>
 								<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 								<div><span>Storage:</span>16 GiB eMMC, M.2 socket, PCIe 4x</div>
@@ -859,7 +859,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>2 GiB - 4 GiB LPDDR3-1866</div>
 								<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 								<div><span>Storage:</span>eMMC socket</div>
@@ -877,7 +877,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>1 GiB DDR3-1866</div>
 								<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 								<div><span>Storage:</span>eMMC socket</div>
@@ -968,7 +968,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>1 GiB DDR3 - 4 GiB DDR4</div>
 								<div><span>NET:</span>2x Gbit Ethernet</div>
 								<br>
@@ -986,7 +986,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB DDR4</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<div><span>Storage:</span>64/128 GiB eMMC</div>
