--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v7.8 is here</h2>
-					<h4>with a new Web interface</h4>
-					<p>This release brings <b>DietPi Dashboard</b> - a new way to monitor and manage remotely your installation ! We have also support for <b>New Zero</b> from RasberryPi and Radxa Zero.</p>
+					<h4>with a new web interface</h4>
+					<p>This release brings <b>DietPi-Dashboard</b>: a new way to monitor and manage your DietPi remotely! We have also support for the new <b>Rasberry Pi Zero 2 W</b> and <b>Radxa Zero</b>.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/#november-2021-version-78" target="_blank" rel="noopener">See more</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
